# convx

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVX-FIX-PROMPT-2.md  CONVX-FIX-PROMPT-V2.md  CONVX-FIX-PROMPT.md  Cargo.toml  DEPENDENCY_CHECKING.md  LICENSE  MCP_USAGE.md  PHASE_1-6_COMPLETE.md  PROMPT-license-v2-build-test.md  README.md  RESEARCH-NATIVE-CONVERTERS.md  convx-build-prompt.md  convx-core-engine-spec.md  convx-frontend-spec.md  convx-implementation-guide.md  convx-licensing-spec.md  convx-phase8-ml-spec.md  convx-privacy-spec.md  convx-test-suite.md  install.sh  toolbox.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-installers.yml  ci.yml
convx-app/: index.html  package-lock.json  package.json  quasar.config.ts  tsconfig.json
convx-app/src/: App.vue
convx-app/src-tauri/: Cargo.toml  tauri.conf.json
convx-app/src-tauri/capabilities/: default.json
convx-app/src-tauri/icons/: icon.icns
convx-app/src-tauri/src/: commands.rs  lib.rs  main.rs
convx-core/: Cargo.toml
convx-core/src/: cli.rs  engine.rs  lib.rs  main.rs  mcp_server.rs  watch.rs
convx-core/src/converters/: audio.rs  data.rs  document.rs  ebook.rs  image.rs  mod.rs  video.rs
convx-core/src/converters/scripts/: pptx_to_pdf.py  xlsx_to_pdf.py
convx-core/src/license/: api.rs  crypto.rs  enterprise.rs  fingerprint.rs  keyfile.rs  mod.rs
convx-core/src/mcp/: main.rs
convx-core/src/presets/: mod.rs
convx-core/src/types/: error.rs  format.rs  mod.rs  options.rs  preset.rs  result.rs
convx-core/src/utils/: deps.rs  ffprobe.rs  mod.rs
convx-core/tests/: conversion_suite.rs  full_matrix.rs  generate_fixtures.sh  integration.rs  unit_tests.rs
docs/: core-engine.md  frontend-architecture.md
docs/plans/: 2026-03-08-windows-installer-overhaul-design.md  2026-03-08-windows-installer-overhaul.md
installers/: EULA.txt  PLAN.md  README.md  bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows.ps1  dependency-manifest.json
installers/linux/: build-bundled-appimage.sh  build-bundled-deb.sh  collect-deps-linux.sh  postinst  run-installer.sh
license-server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
license-server/src/: db.ts  (+6 more)
(+57 files in other folders)
