[package]
name = "convx-core"
version = "1.0.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:rayon", "dep:glob", "dep:indicatif", "dep:console"]

[lib]
name = "convx"
path = "src/lib.rs"

[[bin]]
name = "convx"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "convx-mcp"
path = "src/mcp/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytesize = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
tempfile = "3"
glob = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }
notify = "6"
ctrlc = "3"

# License system
ed25519-dalek = { version = "2", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
hostname = "0.4"
dirs = "5"
printpdf = { version = "0.9.1", features = ["images"] }
image = "0.25.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
